@@ -1,4 +1,4 @@
-CHANGES.txt - 07/18/2002
+CHANGES.txt - 07/19/2002
 ------------------------
 
 CHANGES IN HTMLDOC v1.8.21
@@ -8,6 +8,8 @@ CHANGES IN HTMLDOC v1.8.21
 	- HTMLDOC now supports heading levels 1 to 15.
 	- HTMLDOC now allows the author to omit headings from
 	  the TOC using the _HD_OMIT_TOC attribute.
+	- HTMLDOC now supports remote book files when running
+	  from the command-line.
 
     CHANGES
 
